--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-button",
+  "name": "buttons-and-ddl-components",
   "version": "1.0.0",
   "description": "Styled Component",
   "keywords": [],
